# edl_project__repla

./: .env.local  README.md  all_commands.txt  capability.txt  commands.txt  edl_pipeline.db  project_overview.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  temp.txt
.github/: copilot-instructions.md
api/: __init__.py  auth.py  jobs.py  main.py  refresh.py  schemas.py
config/: profile_payload.json  rules.yaml  sources.yaml
config/uploads/032c5422-ea76-4889-b107-227360ea5b78/: sources.yaml
db/: models.py  persistence.py  session.py
logs/: codex_trace.txt  fetcher.log.2025-10-15  fetcher.log.2025-10-16  fetcher.log.2025-10-17  ingestor.log.2025-10-20  ingestor.log.2025-10-22  ingestor.log.2025-10-26  ingestor.log.2025-10-27  ingestor.log.2025-10-29  validator.log.2025-10-07  validator.log.2025-10-08  validator.log.2025-10-12  validator.log.2025-10-13  validator.log.2025-10-14
models/: augmentation_model.py  ingestion_model.py  models.py  pydantic_models.py  schemas.py  validation_model.py
pipeline/: augmenters.py  cli.py  engine.py  engine_1.py  fetcher.py  fetcher_2.py  ingestor.py  validators.py  validators_logging.py
test_data/: sample_data  shivangi.txt
test_output_data/: acme_augment.json  api_output.json  beta_augment_rules2.json  validated_output.json  validator_output_data.jso
tests/: test_augmentor.py  test_cli.py  test_engine.py  test_ingestor.py  test_pipeline_integration.py
tools/: api_cli.py
utils/: config_loader.py  log_reader.py  logger.py  security.py
(+2 files in other folders)
