[metadata]
name = edl-pipeline
version = 0.1.0
description = EDL Pipeline CLI tool for validation and augmentation
author = Your Name
author_email = you@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    aiohttp
    click
    idna
    loguru
    pydantic
    pyyaml
    requests
    ujson

[options.entry_points]
console_scripts =
    edl-pipeline = cli:main
